WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125984
[CFNetwork] Loading stops at server redirects when using the Network process
https://bugs.webkit.org/show_bug.cgi?id=125984
Summary
[CFNetwork] Loading stops at server redirects when using the Network process
mitz
Reported
2013-12-19 00:24:22 PST
[CFNetwork] Loading stops at server redirects
Attachments
Call willSendRequestAsync() is the client uses async callbacks
(1.89 KB, patch)
2013-12-19 00:28 PST
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2013-12-19 00:25:38 PST
<
rdar://problem/15696824
>
mitz
Comment 2
2013-12-19 00:28:17 PST
Created
attachment 219629
[details]
Call willSendRequestAsync() is the client uses async callbacks
mitz
Comment 3
2013-12-19 09:29:39 PST
Fixed in <
http://trac.webkit.org/r160836
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug