<rdar://problem/15696824> [CFNetwork] Loading stops at server redirects https://bugs.webkit.org/show_bug.cgi?id=125984

Reviewed by Anders Carlsson.

* platform/network/cf/ResourceHandleCFNet.cpp:
(WebCore::ResourceHandle::willSendRequest): If the client uses async callbacks, call its
willSendRequestAsync callback instead if willSendRequest.



Canonical link: https://commits.webkit.org/143977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160836 268f45cc-cd09-0410-ab3c-d52691b4dbfc